fix: chat message text overflow

--- a/django/src/static/styles/chat-room.css
+++ b/django/src/static/styles/chat-room.css
@@ -96,12 +96,17 @@
 .chat-room__message-bubble {
 	max-width: 60%;
 	min-width: 20%;
-	padding: 10px;
+	padding: 0.5em 1em;
 	border-radius: 10px;
 	background-color: var(--color-text-1);
 	margin-top: auto;
 	color: black;
-	text-align: center;
+	text-align: left;
+	word-wrap: break-word;
+	word-break: break-word;
+	overflow-wrap: break-word;
+	white-space: pre-wrap;
+	overflow: hidden;
 }
 
 .chat-room__message-sent .chat-room__message-bubble {
